[package]
name = "rustscii"
version = "0.1.1"
description = "A Rust ASCII game framework."
authors = ["josé luiz <jlc.beker@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
gfx = "0.18.3"
winit = "0.28.6"
image = "0.24.7"

[repository]
type = "git"
url = "https://github.com/jossse69/rustscii.git"